@@ -24,18 +24,21 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.lang.reflect.Modifier;
-import java.io.OutputStreamWriter;
-import java.io.BufferedOutputStream;
 import java.io.FileOutputStream;
 import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.Writer;
 import java.util.regex.Pattern;
 import ij.IJ;
 
 
 /* An utility class to inline java code inside any script of any language.
  * The code, passed on as a String, is placed into a static method without
- * arguments and with a default Object return value. The bindings (read: objects passed to itfrom the scripting language runtime, in a map), are placed
- * into static final private fields of the newly generated class.
+ * arguments and with a default Object return value. The bindings (read:
+ * objects passed to itfrom the scripting language runtime, in a map), are
+ * placed into static final private fields of the newly generated class.
  * Then the class is compiled. No reflection is used anywhere.
  * 
  * An example in jython:
@@ -52,8 +55,7 @@ w = Weaver.inline(
 	}
 	return sum;
 	""",
-	{"nums" : nums},
-	Double)
+	{"nums" : nums})
 
 print w.call()
  *
@@ -147,9 +149,8 @@ public class Weaver {
 		sb.append("public final ").append(rt.getName())
 		  .append(" call() { ").append(code).append("\n}}");
 		// 4. Save the file to a temporary directory
-		String tmpDir = System.getProperty("java.io.tmpdir").replace('\\', '/');
-		if (!tmpDir.endsWith("/")) tmpDir += "/";
-		final File f = new File(tmpDir + "/weave/gen" + k + ".java");
+		File tmpDir = new File(System.getProperty("java.io.tmpdir"));
+		final File f = new File(tmpDir, "/weave/gen" + k + ".java");
 		if (!f.getParentFile().exists() && !f.getParentFile().mkdirs()) {
 			throw new Exception("Could not create directories for " + f);
 		}
@@ -159,15 +160,9 @@ public class Weaver {
 			if (null == ted) ted = new TextEditor("gen" + k + ".java", sb.toString());
 			else ted.newTab(sb.toString(), ".java");
 		}
-		OutputStreamWriter dos = null;
-		try {
-			// Encode in "Latin 1"
-			dos = new OutputStreamWriter(new BufferedOutputStream(new FileOutputStream(f), sb.length()), "8859_1");
-			dos.write(sb.toString(), 0, sb.length());
-			dos.flush();
-		} finally {
-			if (null != dos) dos.close();
-		}
+		Writer writer = new FileWriter(f);
+		writer.write(sb.toString());
+		writer.close();
 		// 5. Compile the file, removing first any class file names that match
 		final Pattern pclass = Pattern.compile("^gen" + k + ".*class$");
 		for (File fc : f.getParentFile().listFiles()) {
@@ -178,10 +173,14 @@ public class Weaver {
 			}
 		}
 		try {
-			new Refresh_Javas().compile(f.getAbsolutePath(), null);
+			Refresh_Javas compiler = new Refresh_Javas();
+			OutputStream out = new IJLogOutputStream();
+			compiler.setOutputStreams(out, out);
+			compiler.compile(f.getAbsolutePath(), null);
 		} finally {
 			// 6. Set the temporary files for deletion when the JVM exits
 			// The .java file
+/*
 			f.deleteOnExit();
 			// The .class files, if any
 			for (File fc : f.getParentFile().listFiles()) {
@@ -189,9 +188,10 @@ public class Weaver {
 					fc.deleteOnExit();
 				}
 			}
+*/
 		}
 		// 7. Load the class file
-		URLClassLoader loader = new URLClassLoader(new URL[]{new URL("file://" + tmpDir)}, IJ.getClassLoader());
+		URLClassLoader loader = new URLClassLoader(new URL[]{tmpDir.toURI().toURL()}, IJ.getClassLoader());
 
 		try {
 			return (Callable<T>) loader.loadClass(className).newInstance();
@@ -251,5 +251,68 @@ public class Weaver {
 			return new Type(sb.toString());
 		}
 		return new Type(c.getName());
+	}
+
+	protected static class IJLogOutputStream extends OutputStream {
+		public byte[] buffer = new byte[16384];
+		public int len;
+
+		protected synchronized void ensure(int length) {
+			if (buffer.length >= length)
+				return;
+
+			int newLength = buffer.length * 3 / 2;
+			if (newLength < length)
+				newLength = length + 16;
+			byte[] newBuffer = new byte[newLength];
+			System.arraycopy(buffer, 0, newBuffer, 0, len);
+			buffer = newBuffer;
+		}
+
+		public synchronized void write(int b) {
+			ensure(len + 1);
+			buffer[len++] = (byte)b;
+			if (b == '\n')
+				flush();
+		}
+
+		public synchronized void write(byte[] buffer) {
+			write(buffer, 0, buffer.length);
+		}
+
+		public synchronized void write(byte[] buffer, int offset, int length) {
+			int eol = length;
+			while (eol > 0)
+				if (buffer[eol - 1] == '\n')
+					break;
+				else
+					eol--;
+			if (eol >= 0) {
+				ensure(len + eol);
+				System.arraycopy(buffer, offset, this.buffer, len, eol);
+				len += eol;
+				flush();
+				length -= eol;
+				if (length == 0)
+					return;
+				offset += eol;
+			}
+			ensure(len + length);
+			System.arraycopy(buffer, offset, this.buffer, len, length);
+			len += length;
+		}
+
+		public void close() {
+			flush();
+		}
+
+		public synchronized void flush() {
+			if (len > 0) {
+				if (buffer[len - 1] == '\n')
+					len--;
+				IJ.log(new String(buffer, 0, len));
+			}
+			len = 0;
+		}
 	}
 }
